--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,16 +1,28 @@
+bad-request = Something went wrong
+user-created = User is created successfully
+user-not-found = User: {0} not found in the system
+user-exist-pin = There is already a user with this pin in the system
 unauthorized = You have to log in to see this page
 access-denied = You do not have permission to see this page
-jwt-token = You have to log in to see this page
+bad-credentials = Password is incorrect
 jwt-token-not-valid = JWT token signature is not valid
 jwt-token-expired = JWT token is expired
-user-not-found = User: {0} not found in the system
-bad-credentials = Password is incorrect
-bad-request = Something went wrong
-user-exist-email = There is already a user with this pin in the system
+account-created = Account is created successfully
+account-exist = There is already account with this number in the system
+account-de-activated = Account is deactivated
+account-not-found = Account: {0} not found in the system
 wrong-password-format = Your Password must be at least 6 characters long and should contain at least one number, one uppercase letter and one lowercase letter
 method-not-allowed = Request method {0} is not supported
 integer-value = You have to input number for {0}
 double-value = You have to input double number for {0}
+big-decimal-value = You have to input big decimal number for {0}
 wrong-format = Request body json format is wrong, {0}
 required-field = {0} must not be empty, please enter it
 endpoint-not-found = API not found
+greater-than-zero = Balance must be greater than 0
+greater-than-one = Amount must be greater than 1
+transfer-success = Transfer was completed successfully
+same-account = Transfer is failed because account you selected for the transfer is the same as account you want to send to
+deactive-account = Transfer is failed because account: {0} was deactivated
+insufficient-balance = There is not enough balance in your account
+currency-not-found = Currency pair: {0} not found in the system
