--- a/src/main/resources/messages_az.properties
+++ b/src/main/resources/messages_az.properties
@@ -1,16 +1,28 @@
+bad-request = Nəsə xəta baş verdi
+user-created = İstifadəçi uğurla yaradıldı
+user-not-found = İstifadəçi: {0} sistemdə tapılmadı
+user-exist-pin = Sistemdə bu fin nömrəsi ilə istifadəçi artıq mövcuddur
 unauthorized = Bu səhifəni görmək üçün daxil olmalısınız
 access-denied = Sizin bu səhifəyə baxmaq üçün icazəniz yoxdur
-jwt-token = Bu səhifəni görmək üçün daxil olmalısınız
+bad-credentials = Şifrə yanlışdır
 jwt-token-not-valid = JWT token etibarlı deyil
 jwt-token-expired = JWT tokenin vaxtı bitib
-user-not-found = İstifadəçi: {0} sistemdə tapılmadı
-bad-credentials = Şifrə yanlışdır
-bad-request = Nəsə xəta baş verdi
-user-exist-email = Sistemdə bu fin nömrəsi ilə istifadəçi artıq mövcuddur
+account-created = Hesabınız uğurla yaradıldı
+account-exist = Sistemdə bu nömrə ilə hesab artıq mövcuddur
+account-de-activated = Hesabınız deaktiv edildi
+account-not-found = Hesab: {0} sistemdə tapılmadı
 wrong-password-format = Parolunuz ən azı 6 simvol uzunluğunda olmalıdır və ən azı bir rəqəm, bir böyük hərf və bir kiçik hərfdən ibarət olmalıdır
 method-not-allowed = {0} sorğu metodu dəstəklənmir
 integer-value = Zəhmət olmasa {0} üçün rəqəm daxil edin
 double-value = Zəhmət olmasa {0} üçün rəqəm daxil edin
+big-decimal-value = Zəhmət olmasa {0} üçün onluq rəqəm daxil edin
 wrong-format = Request body json format sehf daxil edilib, {0}
 required-field = {0} boş olmamalıdır, zəhmət olmasa daxil edin
 endpoint-not-found = API tapılmadı
+greater-than-zero = Balance must be greater than or equal 0
+greater-than-one = Amount must be greater than 1
+transfer-success = Köçürmə əməliyyatı uğurla yerinə yetirildi
+same-account = Köçürmə əməliyyatı üçün seçdiyiniz hesab göndərmək istədiyiniz hesab ilə eyni olduğu üçün əməliyyat uğursuz oldu
+deactive-account = Köçürmə əməliyyatı etmək istədiyiniz {0} nömrəli hesab deaktiv olduğu üçün əməliyyat uğursuz oldu
+insufficient-balance = Hesabınızda kifayət qədər balans yoxdur
+currency-not-found = Valyuta məzənnəsi: {0} sistemdə tapılmadı
